[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "DSSE"
description = "The Drone Swarm Search project provides an environment for SAR missions built on PettingZoo, where agents, represented by drones, are tasked with locating targets identified as shipwrecked individuals."
readme = "README.md"
requires-python = ">= 3.13"
version = "0.26"
authors = [
    { name="Ricardo Ribeiro Rodrigues", email="ricardorr7@al.insper.edu.br" },
    { name="Renato Laffranchi Falcão", email="renatolf1@al.insper.edu.br" },
    { name="Pedro Henrique Britto Aragão Andrade", email="pedroa3@al.insper.edu.br" },
    { name="Jorás Oliveira", email="jorascco@al.insper.edu.br" },
    { name="Fabricio Barth", email="fabriciojb@insper.edu.br" },
    { name="Luis Filipe Carrete" },
    { name="Manuel Castanares" },
    { name="Enrico Damiani" },
    { name="Leonardo Malta" },
]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "AI", "SAR", "Multi Agent Reinforcement Learning"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy",
    "gymnasium",
    "pygame",
    "pettingzoo",
    "matplotlib",
    "numba",
    "h5py>=3.15.1",
    "dotenv>=0.9.9",
    "copernicusmarine>=2.3.0",
    "opendrift>=1.14.8",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
all = [
    "numpy",
    "gymnasium",
    "pygame",
    "pettingzoo",
    "matplotlib",
    "numba",
    "GDAL",
    "opendrift",
]
coverage = [
    "GDAL",
    "opendrift",
]

[project.urls]
Homepage = "https://pfeinsper.github.io/drone-swarm-search/"
Repository = "https://github.com/pfeinsper/drone-swarm-search/"
Documentation = "https://pfeinsper.github.io/drone-swarm-search/"
"Bug Report" = "https://github.com/pfeinsper/drone-swarm-search/issues/"

[tool.uv.build-backend]
module-name = "DSSE"
